# notifier-cli

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  setup_linux.sh
inc/: configure.h.in  main.h  notification_backend.h  notify_send_backend.h
src/: main.cpp  notification_backend.cpp  notify_send_backend.cpp
